# dns

./: Makefile.am  configure.m4
src/: CMakeLists.txt  Makefile.am  dns.c  dns.h
